# ccsm

./: .gitignore  generate_audio.py  main.py  phrases.json  pyproject.toml
api/: main.py
cache/: vocab_cache.json
frontend/: nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: app.vue
frontend/app/components/: InfoSheet.vue  PlayerControls.vue  ProgressBar.vue  SettingsSheet.vue  SleepTimerSheet.vue
frontend/app/composables/: useAmbientSound.js  useAudioPlayer.js  usePinkNoise.js  useSession.js  useSleepTimer.js  useSpeaker.js  useWordLoop.js  useWordPicker.js
frontend/public/: phrases.json  vocab.json
src/: alias.py  build_vocab.py  filter.py  main.py  model.py  phrases.py  sampler.py  session.py  speech.py  vocab.py  word_picker.py
