[project]
name = "cssm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "gensim>=4.4.0",
    "httpx>=0.28.1",
    "mecab>=0.996.13",
    "mypy>=1.20.2",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "unidic-lite>=1.0.8",
    "uvicorn>=0.46.0",
]
